--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev-front": "npm --prefix ./frontend run dev",
     "dev-back": "npm --prefix ./backend run dev",
     "lint": "npm --prefix ./frontend run lint && npm --prefix ./backend run lint",
-    "fix": "npm --prefix ./frontend run fix && npm --prefix ./backend run fix"
+    "fix": "npm --prefix ./frontend run fix && npm --prefix ./backend run fix",
+    "delete": "rm -rf node_modules && cd frontend && rm -rf node_modules && cd ../backend && rm -rf node_modules"
   },
   "keywords": [],
   "author": "Wild Code School",
