delete unuseful backend folder and change script package.json

--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
    "description": "This template is meant to serve as a foundation for every P2/P3 following the React-Express-MySQL stack, as learned in Wild Code School. It's pre-configured with a set of tools which'll help students produce industry-quality and easier-to-maintain code, while staying as simple as possible to use.",
    "main": "index.js",
    "scripts": {
-      "setup": "npm i && husky install && npm --prefix ./frontend i && npm --prefix ./backend i",
-      "migrate": "cd backend/ && node migrate.js && cd ..",
-      "dev": "concurrently -n front,back -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm --prefix ./frontend run dev\" \"npm --prefix ./backend run dev\"",
+      "setup": "npm i && husky install && npm --prefix ./frontend i",
+      "dev": "concurrently -n front,back -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm --prefix ./frontend run dev\"",
       "dev-front": "npm --prefix ./frontend run dev",
-      "dev-back": "npm --prefix ./backend run dev",
-      "lint": "npm --prefix ./frontend run lint && npm --prefix ./backend run lint",
-      "fix": "npm --prefix ./frontend run fix && npm --prefix ./backend run fix",
-      "delete": "rm -rf node_modules && cd frontend && rm -rf node_modules && cd ../backend && rm -rf node_modules"
+      "lint": "npm --prefix ./frontend run lint",
+      "fix": "npm --prefix ./frontend run fix",
+      "delete": "rm -rf node_modules && cd frontend && rm -rf node_modules"
    },
    "keywords": [],
    "author": "Wild Code School",
