--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-spinners": "^0.14.1",
-    "template-fullstack": "file:.."
+    "template-fullstack": "file:..",
+    "vite": "^5.4.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.3",
@@ -33,7 +34,6 @@
     "husky": "^9.1.6",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.11"
+    "tailwindcss": "^3.4.14"
   }
 }
