Fix scripts 'npm run lint' into 'npm run test' for husky init

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "setup": "npm i && husky init && npm --prefix ./frontend i",
     "dev": "concurrently -n front,back -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm --prefix ./frontend run dev\"",
     "dev-front": "npm --prefix ./frontend run dev",
-    "test": "npm --prefix ./frontend run lint",
+    "test": "npm --prefix ./frontend run test",
     "fix": "npm --prefix ./frontend run fix",
     "delete": "rm -rf node_modules package-lock.json && cd frontend && rm -rf node_modules package-lock.json",
     "update": "npx npm-check-updates --upgrade",
