--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fix": "npm --prefix ./frontend run fix",
     "delete": "rm -rf node_modules package-lock.json && cd frontend && rm -rf node_modules package-lock.json",
     "update": "npx npm-check-updates --upgrade",
+    "update2": "ncu -u",
     "prepare": "husky"
   },
   "keywords": [],
