test change scripts

--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "setup": "npm i && husky init && npm --prefix ./frontend i",
     "build": "cd frontend/ && npm run build && cp -r dist ..",
     "dev": "concurrently -n front,back -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm --prefix ./frontend run dev\"",
+    "start": "npm --prefix ./frontend run start",
     "dev-front": "npm --prefix ./frontend run dev",
     "test": "npm --prefix ./frontend run test",
     "fix": "npm --prefix ./frontend run fix",
     "delete": "rm -rf node_modules package-lock.json && cd frontend && rm -rf node_modules package-lock.json",
     "update": "npx npm-check-updates --upgrade",
     "update2": "ncu -u",
-    "prepare": "husky"
+    "prepare": "husky",
+    "preview": "npm --prefix ./frontend run preview"
   },
   "keywords": [],
   "author": "Wild Code School",
