--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "husky": "^9.1.6",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.14"
   }
 }
