--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "setup": "npm i && husky init && npm --prefix ./frontend i",
+    "setupProd": "npm i --omit=dev && husky init && npm --prefix ./frontend i --omit=dev",
     "build": "cd frontend/ && npm run build && cp -r dist ..",
     "dev": "concurrently -n front,back -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm --prefix ./frontend run dev\"",
     "start": "npm --prefix ./frontend run start",
