--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   "scripts": {
     "setup": "npm i && husky init && npm --prefix ./frontend i",
     "setupProd": "npm i --omit=dev && husky init && npm --prefix ./frontend i --omit=dev",
-    "setupWithoutHusky": "npm i --omit=dev && npm --prefix ./frontend i --omit=dev",
-    "build": "cd frontend/ && npm run build",
+    "setupProd2": "npm ci && npm --prefix ./frontend ci && npm --prefix ./frontend run build && npm prune --omit=dev && npm --prefix ./frontend prune --omit=dev",
     "dev": "concurrently -n front,back -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm --prefix ./frontend run dev\"",
     "start": "npm --prefix ./frontend run start-front",
     "start2": "npm --prefix ./frontend run start-front2",
     "dev-front": "npm --prefix ./frontend run dev",
     "test": "npm --prefix ./frontend run test",
     "fix": "npm --prefix ./frontend run fix",
-    "delete": "rm -rf node_modules package-lock.json && cd frontend && rm -rf node_modules package-lock.json",
+    "delete": "rimraf node_modules package-lock.json frontend/node_modules frontend/package-lock.json frontend/dist",
     "update": "npx npm-check-updates --upgrade",
     "update2": "ncu -u",
     "preview": "npm --prefix ./frontend run preview"
